Add apartado en swagger. Creacion de GET, POST asociaciones
