# config/routes.php
@@ -9,6 +9,7 @@
 
 use Slim\App;
 use TDW\ACiencia\Controller\Login\{ LoginController, OptionsQuery };
+use TDW\ACiencia\Controller\AsociacionController;
 
 return function (App $app) {
 
@@ -34,4 +35,13 @@ return function (App $app) {
         $_ENV['RUTA_LOGIN'],
         LoginController::class
     )->setName('api_post_login');
+
+    $app->group('/api/v1', function (\Slim\Routing\RouteCollectorProxy $api) {
+        $api->group('/asociaciones', function (\Slim\Routing\RouteCollectorProxy $group) {
+            $group->get('', AsociacionController::class . ':index');
+            $group->get('/{id:[0-9]+}', AsociacionController::class . ':show');
+            $group->post('', AsociacionController::class . ':create');
+            $group->delete('/{id:[0-9]+}', AsociacionController::class . ':delete');
+        });
+    });    
 };
